fixed lower header coloring
it was hard to read with background, so i added a text stroke to it

--- a/V2 site/style.css
+++ b/V2 site/style.css
@@ -364,6 +364,17 @@ a.button.button-left:hover{
 
 .titulozim{
   padding: 30px 0px 300px 0px;
+  /*text-shadow:
+   -1px -1px 0 #fff,  
+    1px -1px 0 #fff,
+    -1px 1px 0 #fff,
+     1px 1px 0 #fff;
+  color:#FF9735;*/
+  text-shadow:
+   -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+     1px 1px 0 #000;
 }
 .color-border
 {
